fix: change z-index for cactus

--- a/public/index.css
+++ b/public/index.css
@@ -894,7 +894,7 @@ body {
   position: absolute;
   top: -200px;
   left: -80px;
-  z-index: 1;
+  z-index: 0;
   width: 280px;
 }
 .room__cactus:after {
