--- a/src/assets/scss/modules/_desk.scss
+++ b/src/assets/scss/modules/_desk.scss
@@ -14,7 +14,7 @@
     position: absolute;
     top: -200px;
     left: -80px;
-    z-index: 1;
+    z-index: 0;
     width: 280px;
     &:after {
       content: '';
